[gd_scene load_steps=7 format=3 uid="uid://cqam5lpaf7noh"]

[ext_resource type="Script" uid="uid://b3ls7l0qoxvn2" path="res://Levels/Screens/MainMenu/main_menu.gd" id="1_8ekdx"]
[ext_resource type="PackedScene" uid="uid://by88lr47yw5hw" path="res://Levels/Screens/Settings/settings.tscn" id="2_jhyof"]
[ext_resource type="PackedScene" uid="uid://ds200vh54br31" path="res://Levels/Screens/Intro/intro.tscn" id="3_jhyof"]

[sub_resource type="Animation" id="Animation_ul3hv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jhyof"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ul3hv"]
_data = {
&"RESET": SubResource("Animation_ul3hv"),
&"fade": SubResource("Animation_jhyof")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ekdx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0269097
anchor_top = 0.578704
anchor_right = 0.262153
anchor_bottom = 0.924383
grow_vertical = 0
theme_override_constants/separation = 30
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="Buttons"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
text = "Exit"

[node name="Settings" parent="." instance=ExtResource("2_jhyof")]
layout_mode = 1

[node name="Resume" parent="Settings/Menu" index="0"]
visible = false

[node name="Exit" parent="Settings/Menu" index="4"]
visible = false

[node name="Return" type="Button" parent="Settings/Menu" index="5"]
layout_mode = 2
text = "Return"

[node name="Intro" parent="." instance=ExtResource("3_jhyof")]
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ul3hv")
}

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/Menu/Return" to="." method="_on_resume_2_pressed"]

[editable path="Settings"]
[editable path="Settings/InputSettings"]
